client-app/uncommon-sync/invoice-sync/objects/OBJ_Invoice_Item__c/OBJ_Invoice_Item__c.object-meta.xml
<CustomObject>
    <label>OBJ Invoice Item</label>
    <nameField>
        <label>OBJ SAP Invoice Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OBJ SAP Invoice Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>