client-app/uncommon-sync/invoice-sync/objects/OBJ_Invoice_Item__c/fields/FLD_ItemNumber__c.field-meta.xml
<CustomField>
    <fullName>FLD_ItemNumber__c</fullName>
    <label>FLD Item Number</label>
    <description>SAP Item Number</description>
    <length>6</length>
    <type>Text</type>
</CustomField>