client-app/uncommon-sync/invoice-sync/objects/OBJ_Invoice_Item__c/fields/FLD_Material__c.field-meta.xml
<CustomField>
    <fullName>FLD_Material__c</fullName>
    <label>FLD Material</label>
    <description>SAP Material</description>
    <length>18</length>
    <type>Text</type>
</CustomField>