client-app/uncommon-sync/invoice-sync/objects/OBJ_Invoice_Item__c/fields/FLD_OBJ_Invoice__c.field-meta.xml
<CustomField>
    <fullName>FLD_OBJ_Invoice__c</fullName>
    <description>OBJ Invoice</description>
    <inlineHelpText>OBJ Invoice</inlineHelpText>
    <label>FLD OBJ Invoice</label>
    <referenceTo>OBJ_Invoice__c</referenceTo>
    <relationshipLabel>OBJ Invoice Item (OBJ Invoice)</relationshipLabel>
    <relationshipName>OBJ_Invoice_Item_OBJ_Invoice</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>