client-app/uncommon-sync/invoice-sync/objects/OBJ_Invoice_Item__c/fields/FLD_Quantity__c.field-meta.xml
<CustomField>
    <fullName>FLD_Quantity__c</fullName>
    <label>FLD Quantity</label>
    <description>SAP Quantity</description>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>